Fixed overflow issue on background video. Started new about section

--- a/_sass/work.scss
+++ b/_sass/work.scss
@@ -210,6 +210,7 @@
 
   .home-beach {
     display: inline-block;
+    overflow: auto;
   }
 
   .work-container {
